refactor: Update card-home component to display author instead of description

--- a/angular/src/app/shared-components/card-home/card-home.component.html
+++ b/angular/src/app/shared-components/card-home/card-home.component.html
@@ -23,7 +23,8 @@
     </div>
     <div>
       <p class="card-text">{{ lightNovelCard.created_at }}</p>
-      <p class="card-text">{{ lightNovelCard.description }}</p>
+      <p class="card-text">{{ lightNovelCard.author }}</p>
     </div>
   </div>
+  <app-tooltip-card [lightNovelCard]="lightNovelCard"></app-tooltip-card>
 </div>
