--- a/angular/src/app/pages/users/users.component.scss
+++ b/angular/src/app/pages/users/users.component.scss
@@ -1,10 +1,8 @@
 #container {
-  position: relative;
-  display: flex;
-  justify-content: center;
   width: 100%;
   min-height: 80vh;
   overflow: hidden;
+  padding: 0 3vw 0 3vw;
 }
 
 #container::after {
