--- a/angular/src/app/shared-components/user-card/user-card.component.html
+++ b/angular/src/app/shared-components/user-card/user-card.component.html
@@ -1,41 +1,42 @@
-<table class="table table-bordered table-hover shadow-lg">
+<div class="container justify-content-center d-flex text-white">
+  <div class="row">
+    <div class="col-12">
+      <h1>Pagina Utenti</h1>
+    </div>
+  </div>
+</div>
+<table class="table table-bordered table-hover">
   <thead class="thead-light">
     <tr>
-      <th scope="col">Info</th>
+      <th scope="col">Avatar</th>
+      <th scope="col">Nome</th>
+      <th scope="col">Genere</th>
+      <th scope="col">Username</th>
+      <th scope="col">Email</th>
       <th scope="col">Actions</th>
     </tr>
   </thead>
   <tbody>
-    <tr
-      *ngFor="
-        let user of users | paginate : { itemsPerPage: 5, currentPage: p }
-      "
-    >
+    <tr *ngFor="let user of users">
       <td>
-        <div class="row g-0">
-          <div
-            class="col-md-4 align-items-center d-flex justify-content-center"
-          >
-            <img
-              [src]="user.userImage"
-              alt="icon"
-              class="rounded-circle"
-              style="width: 100px; height: auto"
-            />
-          </div>
-          <div class="col-md-8">
-            <div class="card-body">
-              <h5 class="card-title">{{ user.name }} {{ user.surname }}</h5>
-              <p class="card-text">
-                <strong>Gender:</strong> {{ user.gender }}
-              </p>
-              <p class="card-text">
-                <strong>Username:</strong> {{ user.username }}
-              </p>
-              <p class="card-text"><strong>Email:</strong> {{ user.email }}</p>
-            </div>
-          </div>
-        </div>
+        <img
+          [src]="user.userImage"
+          alt="icon"
+          class="rounded-circle"
+          style="width: 50px; height: auto"
+        />
+      </td>
+      <td>
+        <h5 class="card-title">{{ user.name }} {{ user.surname }}</h5>
+      </td>
+      <td>
+        <p class="card-text"><strong>Gender:</strong> {{ user.gender }}</p>
+      </td>
+      <td>
+        <p class="card-text"><strong>Username:</strong> {{ user.username }}</p>
+      </td>
+      <td>
+        <p class="card-text"><strong>Email:</strong> {{ user.email }}</p>
       </td>
       <td
         class="d-flex justify-content-center align-items-center flex-grow-1 w-100"
@@ -70,12 +71,6 @@
     </tr>
   </tbody>
 </table>
-<div class="d-flex justify-content-center border-3">
-  <pagination-controls
-    (pageChange)="p = $event"
-    class="my-pagination"
-  ></pagination-controls>
-</div>
 
 <ng-template #deleteModal let-modal>
   <div class="modal-header">
