--- a/angular/src/app/shared-components/user-card/user-card.component.scss
+++ b/angular/src/app/shared-components/user-card/user-card.component.scss
@@ -1,23 +1,20 @@
 
 
 td{
-  height:15vh;
-  backdrop-filter: blur(100px);
   background-color: rgba(255, 255, 255, 0);
   overflow: hidden;
+  color: white;
 }
 th{
-  backdrop-filter: blur(30px);
   background-color: #3b435e9f;
+  color: white;
 }
-table{
-  width: 100%;
-  backdrop-filter: blur(3px);
+table {
+  backdrop-filter: blur(20px);
   background-color: rgba(255, 255, 255, 0);
   box-shadow: 20px 1px 100px black !important;
   margin-top: 3vh;
-  border: .1px solid rgba(255, 255, 255, 0.205);
-
+  border: 1px solid rgba(255, 255, 255, 0.205);
 }
 img{
   box-shadow: 1px 8px 20px gray !important;
@@ -28,3 +25,6 @@ img{
   margin-top: 20px;
   color: white;
 }
+
+
+
